# dioxus-demo

./: Cargo.toml  Dioxus.toml
example-projects/router_example/: Cargo.toml  Dioxus.toml
example-projects/router_example/src/: main.rs
example-projects/todoMvcV1/: Cargo.toml  Dioxus.toml
example-projects/todoMvcV1/src/: main.rs
example-projects/wifiScans/: Cargo.toml  Dioxus.toml
example-projects/wifiScans/src/: main.rs
example-projects/wifi_scans/: Cargo.toml
example-projects/wifi_scans/src/: main.rs
public/: index.html
src/: main.rs
