[package]
name = "dioxus-demo"
version = "0.1.0"
authors = ["wolf88844 <wolf88840@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["example-projects/*"]

[workspace.dependencies]
dioxus = { version = "0.6.0", features = ["web", "fullstack", "desktop"] }
tokio = { version = "1.0" }
dioxus-logger = "0.6.1"
log = "0.4.20"

[dependencies]
dioxus = { version = "0.6.0", features = ["web", "fullstack"] }
log = "0.4"
dioxus-logger = "0.4"
wasm-bindgen = "0.2"
dioxus-router = "0.6.0"


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[[example]]
name = "web_todo"
path = "examples/web_todo.rs"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
